@@ -10,7 +10,7 @@ use Title;
  * This is a hook handler interface, see docs/Hooks.md.
  * Use the hook name "UndeleteForm::undelete" to register handlers implementing this interface.
  *
- * @stable to implement
+ * @deprecated since 1.37
  * @ingroup Hooks
  */
 interface UndeleteForm__undeleteHook {
